# costy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  alembic.ini  env.py  pyproject.toml  readme.md  requirements.txt  setup.cfg
.github/workflows/: docker.yaml  pre-commit.yaml  python-app.yml  tests.yaml
app/: main.py
app/account/auth/: services.py  views.py
app/account/users/: services.py  views.py
app/apps/operations/: schemas.py  services.py  views.py
app/auth/: services.py  views.py
app/crud/: auth.py  operations.py  users.py
app/database/: database.py
app/models/: operations.py  users.py
app/operations/: services.py  views.py
app/schemas/: operations.py  users.py
app/tests/: config.py  database_test.py  main_test.py  patterns.py
app/tests/func/: auth_test.py  main_test.py  operations_test.py  users_test.py
app/tests/modal/: auth_test.py  users_test.py
app/tests/module/: auth_test.py  operations_test.py  users_test.py
app/tests/unit/: auth_test.py  operations_test.py  users_test.py
app/views/: auth.py  operations.py  users.py
docs/source/: conf.py  index.rst
kubeconf/: config.yml  deployment.yml  postgres-service.yml  secrets_template.yml  sercets.yml  service.yml
migration/: env.py
migration/versions/: 0c6eed52399f_.py  48d00b4868c7_.py  725589cc0adb_categories.py  79110a6de7e7_change_bankinfoproperty_field_names.py  804ce544203d_.py  86f9d6304908_initial.py  8db0b3c70d3d_.py  f2d154c7bc55_.py
src/: database.py  depends.py  main.py  middlewares.py
src/app/: unit_of_work.py
src/app/adapters/: orm.py  repository.py
src/auth/: config.py  password.py  services.py
src/core/: database.py
src/routers/: auth.py  bank_api.py  categories.py  limits.py  operations.py  statistic.py  users.py
src/schemas/: auth.py  categories.py  limits.py  operations.py  statistic.py  users.py
tests/: config.py  conftest.py  fake_repositories.py  infrastructure.py  patterns.py  test_stable.py
tests/adapters/: test_auth_adapter.py  test_category_adapter.py  test_operation_adapter.py  test_user_adapter.py
tests/application/: test_authenticate.py
tests/common/: adapters.py  app.py  data.py  database.py  infrastructure.py
tests/domain/: test_create.py  test_update.py
tests/fake_adapters/: bank_api.py  bank_info.py  base.py  categories.py  costs.json  limits.py  operations.py  uow.py  users.py
tests/fixtures/: adapters.py  data.py  db.py  infrastructure.py  templates.py
tests/func/: auth_test.py  bank_api_test.py  operations_test.py  statistic_test.py  users_test.py
tests/integration/: test_authenticate.py  test_bankapi.py  test_category.py  test_operation.py
tests/integrations/: auth_test.py  bank_api_test.py  categories_test.py  operations_test.py  statistic_test.py  users_test.py
tests/unit/: auth_test.py  bank_api_test.py  categories_test.py  database_test.py  operations_test.py  statistic.py  statistic_test.py  users_test.py
tests_playwright/: test_auth.py
(+159 files in other folders)
