[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="costy"
version="0.0.1"
dependencies = [
    'sqlalchemy',
    'litestar',
    'uvicorn',
    'psycopg[binary]',
    'alembic'
]

[project.optional-dependencies]
tests = [
    'pytest',
    'pytest-asyncio',
    'pytest-env',
    'pytest-cov'
]
dev = [
    'costy[tests]',
    'black',
    'isort',
    'mypy',
    'flake8',
    'bandit'
]

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
target-version = ['py310']

[tool.pytest_env]
