[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "costy"
version = "0.0.1"
dependencies = [
    'sqlalchemy',
    'litestar',
    'uvicorn',
    'psycopg[binary]',
    'alembic',
    'adaptix',
    'aiohttp',
    'python-jose',
    'prometheus-client'
]

[project.optional-dependencies]
ci-tests = [
    'pytest',
    'pytest-asyncio',
    'pytest-cov',
    'pre-commit',
    'ruff',
    'isort',
    'mypy',
    'flake8',
    'bandit'
]

dev = [
    'costy[ci-tests]',
    'pytest-env',
]

[tool.isort]
multi_line_output = 3
line_length = 120
include_trailing_comma = true
combine_as_imports = true
remove_redundant_aliases = true


[tool.ruff]
exclude = ['migrations']
line-length = 120

[tool.ruff.lint]
select = ['ALL']
fixable = [
    'Q000',
    'Q001',
    'COM812',
    'D400',
    'PT001',
]
ignore = [
    # Rules that should be turned on in the near future
    'D',
    'N818',
    'B904',
    'FIX002',
    'RUF012',
    'S311',
    'DTZ005',
    'DTZ006',
    # Rules emitting false alerts
    'N804',
    'B008',
    'BLE001',
    'RUF009',
    'I001',
    # Rules that are not applicable in the project for now
    'TID252',
    'D104',
    'ANN',
    'SLF001',
    'ARG',
    'D100',
    'PLR0913',
    'TCH002',
    # Strange and obscure rules that will never be turned on
    'ANN101',
    'FA100',
    'TRY003',
    'TRY201',
    'EM',
    'PERF203',
    'TCH001',
    'TD002',
    'PTH201',
    'RSE102',
    'FA102',
    'TD003',
    'PTH123'
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ['F401']

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "list"
